[package]
name = "libhexapanel"
version = "0.1.0"
authors = ["Enno Boland <g@s01.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "2.1.0"
image = { version = "0.23.14", optional = true }
raqote = { version = "0.8.0", default-features = false }
